--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       
       <meta name="copyright" content="Vinit Shahdeo 2020" /> 
 
-      <title>Wedding Invitation | 11th April | Gulshan Marraige Hall</title>
+      <title>Wedding Invitation | 11th April | Gulshan Marraige Hall,Kanpur</title>
 
       <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
       <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Dancing+Script&amp;display=swap'>
@@ -30,7 +30,7 @@
          The Most Beneficent, The Most Merciful,
       </div>
       <div class="parents_name">
-         Mrs. Nafisa <br> and <br> Mr. Mohd Rizwan
+         <br> Mr. Qamaruddin Mansoori
       </div>
       <div style="text-align: center;">
          request you to come & shower your blessings<br>
@@ -40,6 +40,7 @@
       <div class="wrap">
          <div class="title">
             <h1>Azmi</h1>
+            <div class="parents_name_in_small">(S/o. Mrs. Nafisa and Mr. Mohd rizwan, Goregaon, Mumbai)</div>
             <h3>weds</h2>
             <h1>Faisal</h1>
             <div class="parents_name_in_small">(S/o. Mrs. Shabina Shaikh and Mr. Jameel Shaikh urf Mamu, Goregaon, Mumbai)</div>
