--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
          The Most Beneficent, The Most Merciful,
       </div>
       <div class="parents_name">
-         <br> Mr. Qamaruddin Mansoori
+         Mr. Qamaruddin Mansoori
       </div>
       <div style="text-align: center;">
          request you to come & shower your blessings<br>
-         at the Wedding Ceremony of their Daughter
+         at the Wedding Ceremony of their Grand Daughter
       </div>
       
       <div class="wrap">
          <div class="title">
             <h1>Azmi</h1>
-            <div class="parents_name_in_small">(S/o. Mrs. Nafisa and Mr. Mohd rizwan, Goregaon, Mumbai)</div>
+            <div class="parents_name_in_small">(D/o. Mrs. Nafisa and Mr. Mohd Rizwan)</div>
             <h3>weds</h2>
             <h1>Faisal</h1>
             <div class="parents_name_in_small">(S/o. Mrs. Shabina Shaikh and Mr. Jameel Shaikh urf Mamu, Goregaon, Mumbai)</div>
