--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="wrap">
          <div class="title">
             <h1>Azmi</h1>
-            <div class="parents_name_in_small">(D/o. Mrs. Nafisa and Mr. Mohd Rizwan)</div>
+            <div class="parents_name_in_small">(D/o. Mrs. Nafisa and Mr. Mohd Rizwan)</div><br>
             <h3>weds</h2>
             <h1>Faisal</h1>
             <div class="parents_name_in_small">(S/o. Mrs. Shabina Shaikh and Mr. Jameel Shaikh urf Mamu, Goregaon, Mumbai)</div>
