--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       <meta name="author" content="Mohd Furqan">
       <meta name="email" content="mohd.furqan92@gmail.com">
       
-      <meta name="copyright" content="Vinit Shahdeo 2020" /> 
+      <meta name="copyright" content="Mohd Furqan 2021" /> 
 
-      <title>Wedding Invitation | 11th April | Gulshan Marraige Hall,Kanpur</title>
+      <title>Wedding Invitation | 11th November 2021 | Gulshan Marraige Hall,Kanpur</title>
 
       <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
       <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Dancing+Script&amp;display=swap'>
@@ -30,7 +30,7 @@
          The Most Beneficent, The Most Merciful,
       </div>
       <div class="parents_name">
-         Mr. Qamaruddin Mansoori
+         Mr. Qamaruddin
       </div>
       <div style="text-align: center;">
          request you to come & shower your blessings<br>
