--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="parents_name_in_small">(D/o. Mrs. Nafisa and Mr. Mohd Rizwan)</div><br>
             <h3>weds</h2>
             <h1>Faisal</h1>
-            <div class="parents_name_in_small">(S/o. Mrs. Shabina Shaikh and Mr. Jameel Shaikh urf Mamu, Goregaon, Mumbai)</div>
+            <div class="parents_name_in_small">(S/o. Mrs. Shabina Shaikh and Mr. Jameel Shaikh, Goregaon, Mumbai)</div>
             <p>
                on <br> <span class="date">11 November 2021</span>, <br> At <br> <span class="place">Gulshan Marriage Hall, Chaman Ganj,</span> <br> Kanpur, 208001.
             </p>
