--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
          <p style="text-align: center;"> <span class="date">DINNER</span> <br>  TO FOLLOW FROM <span class="date">8:00 PM</span>  ONWARDS</p>
       <div class="actions">
         <a href="https://goo.gl/maps/GTHEBLQzStRVTnUB6" target="_blank">
-          <div class="venue">Map Location</div>
+          <div class="venue">Venue Location</div>
         </a>
         <a href="https://www.google.com/calendar/render?action=TEMPLATE&amp;text=Azmi+Wedding&amp;location=Gulshan Marriage Hall+Chaman Ganj%2C+Kanpur&amp;dates=20211111T130000Z%2F20211111T163000Z" target="_blank">
           <div class="venue">Add to Calender</div>
