--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
          Just a ping away for any queries: <br> <a href="tel:+919335135559">+919335135559</a>
          <span></span>
       </p>
+       <div style="text-align: center;">
+         répondez s'il vous plaît(R.S.V.P)<br>
+         All Relatives & Friends.
+      </div>
       <!-- partial -->
       <script src='cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
       <script src='cdn.jsdelivr.net/gh/timoschaefer/jQuery-Sakura/jquery-sakura.min.js'></script>
