--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
          <span></span>
       </p>
        <div style="text-align: center;">
-         répondez s'il vous plaît(R.S.V.P)<br>
+         Répondez S'il Vous Plaît <br>(R.S.V.P)<br>
          All Relatives & Friends.
       </div>
       <!-- partial -->
