--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
          Mr. Qamaruddin
       </div>
       <div style="text-align: center;">
-         request you to come & shower your blessings<br>
+         requesting you to come & shower your blessings<br>
          at the Wedding Ceremony of their Grand Daughter
       </div>
       
