--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
          Répondez S'il Vous Plaît <br>(R.S.V.P)<br>
          All Relatives & Friends.
       </div>
+      <a rel='nofollow' href='https://www.qr-code-generator.com' border='0' style='cursor:default'><img src='https://chart.googleapis.com/chart?cht=qr&chl=https%3A%2F%2Fghostown92.github.io%2FAzmi-Faisal%2F&chs=180x180&choe=UTF-8&chld=L|2' alt=''></a>
       <!-- partial -->
       <script src='cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
       <script src='cdn.jsdelivr.net/gh/timoschaefer/jQuery-Sakura/jquery-sakura.min.js'></script>
