--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
          The Most Beneficent, The Most Merciful,
       </div>
       <div class="parents_name">
-         Mr. Qamaruddin
+         Late. Jb Qamaruddin
       </div>
       <div style="text-align: center;">
          requesting you to come & shower your blessings<br>
@@ -40,7 +40,7 @@
       <div class="wrap">
          <div class="title">
             <h1>Azmi</h1>
-            <div class="parents_name_in_small">(D/o. Mrs. Nafisa and Mr. Mohd Rizwan)</div><br>
+            <div class="parents_name_in_small">(D/o. Mrs. Nafisa and Late. Mohd Rizwan)</div><br>
             <h3>weds</h2>
             <h1>Faisal</h1>
             <div class="parents_name_in_small">(S/o. Mrs. Shabina Shaikh and Mr. Jameel Shaikh, Goregaon, Mumbai)</div>
