--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
          The Most Beneficent, The Most Merciful,
       </div>
       <div class="parents_name">
-         Late. Jb Qamaruddin
+         Late. Janab Qamaruddin
       </div>
       <div style="text-align: center;">
          requesting you to come & shower your blessings<br>
@@ -40,7 +40,7 @@
       <div class="wrap">
          <div class="title">
             <h1>Azmi</h1>
-            <div class="parents_name_in_small">(D/o. Mrs. Nafisa and Late. Mohd Rizwan)</div><br>
+            <div class="parents_name_in_small">(D/o. Mrs. Nafisa and Late Mr. Mohd Rizwan)</div><br>
             <h3>weds</h2>
             <h1>Faisal</h1>
             <div class="parents_name_in_small">(S/o. Mrs. Shabina Shaikh and Mr. Jameel Shaikh, Goregaon, Mumbai)</div>
@@ -64,15 +64,15 @@
         </a>
       </div>
       <p class="footer">
-         Can't wait to celebrate auspicious moment of our family with you! <br>
-         Just a ping away for any queries: <br> <a href="tel:+919335135559">+919335135559</a>
+         
+         Just a ping away for any queries: <br> <a href="tel:+919415486343">+919415486343</a>
          <span></span>
       </p>
        <div style="text-align: center;">
          Répondez S'il Vous Plaît <br>(R.S.V.P)<br>
          All Relatives & Friends.
       </div>
-      <a rel='nofollow' href='https://www.qr-code-generator.com' border='0' style='cursor:default'><img src='https://chart.googleapis.com/chart?cht=qr&chl=https%3A%2F%2Fghostown92.github.io%2FAzmi-Faisal%2F&chs=180x180&choe=UTF-8&chld=L|2' alt=''></a>
+      
       <!-- partial -->
       <script src='cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
       <script src='cdn.jsdelivr.net/gh/timoschaefer/jQuery-Sakura/jquery-sakura.min.js'></script>
