--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
          Late. Janab Qamaruddin
       </div>
       <div style="text-align: center;">
-         requesting you to come & shower your blessings<br>
+         come & shower your blessings<br>
          at the Wedding Ceremony of their Grand Daughter
       </div>
       
@@ -43,7 +43,7 @@
             <div class="parents_name_in_small">(D/o. Mrs. Nafisa and Late Mr. Mohd Rizwan)</div><br>
             <h3>weds</h2>
             <h1>Faisal</h1>
-            <div class="parents_name_in_small">(S/o. Mrs. Shabina Shaikh and Mr. Jameel Shaikh, Goregaon, Mumbai)</div>
+            <div class="parents_name_in_small">(S/o. Mrs. Shabina and Mr. Jameel, Goregaon, Mumbai)</div>
             <p>
                on <br> <span class="date">11 November 2021</span>, <br> At <br> <span class="place">Gulshan Marriage Hall, Chaman Ganj,</span> <br> Kanpur, 208001.
             </p>
@@ -52,7 +52,8 @@
       <div id="time"></div>
          <div class="dance-med">
             Insha 'Allah<br>
-            Nikah after Namaz-E-Isha
+            Nikah after Namaz-E-Isha <br>
+            @ Masjid Halim Primary,Kanpur
          </div>
          <p style="text-align: center;"> <span class="date">DINNER</span> <br>  TO FOLLOW FROM <span class="date">8:00 PM</span>  ONWARDS</p>
       <div class="actions">
