--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
       <meta name="description"
-         content="With the divine grace of the almighty, inviting you to Azmi's wedding to be held on 11th November 2021 at Gulshan Marriage Hall, Chaman Ganj, Kanpur">
+         content="With the divine grace of the almighty, inviting you to the wedding to be held on 11th November 2021 at Gulshan Marriage Hall, Chaman Ganj, Kanpur">
       <meta name="author" content="Mohd Furqan">
       <meta name="email" content="mohd.furqan92@gmail.com">
       
