--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h3>&</h2>
             <h1>Afzal Siddique</h1>
             
-            <div class="parents_name_in_small">(D/o. Mrs. Tahseen Anjum and Mr. Aquil Ahmed) &ensp; &emsp; &ensp; (S/o. Mrs.  and Mr. Zubai Sidiqui,KDA Jajmau) </div><br><br>
+            <div class="parents_name_in_small">(S/o. Mrs.  and Mr. Zubai Sidiqui,KDA Jajmau) </div><br><br>
                        
             <p>
                on <br> <span class="date">29th January 2025</span>, <br> At <br> <span class="place">Pacific lawn, KDA Jajmau,</span> <br> Kanpur, 208010.
