--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h3>&</h2>
             <h1>Afzal Siddique</h1>
             
-            <div class="parents_name_in_small">(S/o. Mrs. & Mr. Zubair Ahmed, KDA Jajmau) </div><br><br>
+            <div class="parents_name_in_small">(S/o. Mrs. & Mr. Zubair Ahmed, KDA  Jajmau) </div><br><br>
                        
             <p>
                on <br> <span class="date">29th January 2025</span>, <br> At <br> <span class="place">Pacific lawn, KDA Jajmau,</span> <br> Kanpur, 208010.
@@ -56,7 +56,7 @@
             Nikah after Namaz-E-Zohar <br>
             @ Masjid Ayesha,KDA Jajmau, Kanpur
          </div>
-         <p style="text-align: center;"> <span class="date">DINNER</span> <br> <span class="date">After Namaz-E-Isha ONWARDS</p>
+         <p style="text-align: center;"> <span class="date">DINNER</span> <br> <span class="date">After Namaz-E-Isha </p>
       <div class="actions">
         <a href="https://maps.app.goo.gl/k9zXrVg7925jxj8i8" target="_blank">
           <div class="venue">Venue Location</div>
