--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       </div>
       <div id="time"></div>
          <div class="dance-med">
-            Insha 'Allah<br>
-            Nikah after Namaz-E-Zohar <br>
+            Insha'Allah<br>
+            Nikah on 29th January after Namaz-E-Zohar <br>
             @ Masjid Ayesha,KDA Jajmau, Kanpur
          </div>
          <p style="text-align: center;"> <span class="date">DINNER</span> <br> <span class="date">After Namaz-E-Isha </p>
