--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
       <meta name="description"
-         content="With the divine grace of the almighty, inviting you to the wedding to be held on 29th January 2025 at Pacific Lawn, KDA Jajmau, Kanpur">
+         content="Inviting you to the wedding ceremony to be held on 29th January 2025 at Pacific Lawn, KDA Jajmau, Kanpur">
       <meta name="author" content="Mohd Furqan">
       <meta name="email" content="mohd.furqan92@gmail.com">
       
       <meta name="copyright" content="Mohd Furqan 2024" /> 
 
-      <title>Wedding Invitation | 29th january 2025 | Pacific lawn,KDA Jajmau,Kanpur</title>
+      <title>Wedding Invitation | 29th january 2025 | Pacific lawn, KDA Jajmau, Kanpur</title>
 
       <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
       <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Dancing+Script&amp;display=swap'>
