--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="wrap">
          <div class="title">
             <h1>Ayesha Anjum</h1>
-            <h3>&</h2>
+            <h3>Weds</h2>
             <h1>Afzal Siddique</h1>
             
             <div class="parents_name_in_small">(S/o. Mrs. & Mr. Zubair Ahmed, KDA  Jajmau) </div><br><br>
@@ -52,9 +52,9 @@
       </div>
       <div id="time"></div>
          <div class="dance-med">
-            Insha'Allah<br>
-            Nikah on 29th January after Namaz-E-Zohar <br>
-            @ Masjid Ayesha,KDA Jajmau, Kanpur
+            Insha'Allah Nikah on <br>
+            29th January after Namaz-E-Zohar <br>
+            at Masjid-E-Ayesha, KDA Jajmau, Kanpur
          </div>
          <p style="text-align: center;"> <span class="date">DINNER</span> <br> <span class="date">After Namaz-E-Isha </p>
       <div class="actions">
