--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
          Mrs. & Mr. Aquil Ahmed
       </div>
       <div style="text-align: center;">
-         come & shower your blessings<br>
+         request you to come & shower your blessings<br>
          at the Wedding Ceremony of their Daughter
       </div>
       
