--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
       <div id="time"></div>
          <div class="dance-med">
             Insha'Allah Nikah on <br>
-            29th January after Namaz-E-Zohar <br>
-            at Masjid-E-Ayesha, KDA Jajmau, Kanpur
-
-             Nikah on <br> <span class="date">10th May 2024 after Namaz-E-Asar</span>, <br> At <br> <span class="place"> Jama Masjid, Santosh Nagar, Katraj </span> <br>Pune, Maharashtra.
+            <span class="date">29th january 2025 after Namaz-E-Zohar</span>, <br> At <br> <span class="place"> Ayesha Masjid, KDA Colony, Jajmau </span> <br>Kanpur.
          </div>
          <p style="text-align: center;"> <span class="date">DINNER</span> <br> <span class="date">After Namaz-E-Isha </p>
       <div class="actions">
