--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
          request you to come & shower your blessings<br>
          at the Wedding Ceremony of their Daughter
       </div>
-      
-      <div class="wrap">
+            <div class="wrap">
          <div class="title">
             <h1>Ayesha Anjum</h1>
             <h3>Weds</h2>
@@ -53,7 +52,7 @@
       <div id="time"></div>
          <div class="dance-med">
             Insha'Allah Nikah on <br>
-            <span class="date">29th january 2025 after Namaz-E-Zohar</span>, <br> At <br> <span class="place"> Ayesha Masjid, KDA Colony, Jajmau </span> <br>Kanpur.
+            <span class="date">29th January 2025 after Namaz-E-Zohar</span>, <br> At <br> <span class="place"> Ayesha Masjid, KDA Colony, Jajmau </span> <br>
          </div>
          <p style="text-align: center;"> <span class="date">DINNER</span> <br> <span class="date">After Namaz-E-Isha </p>
       <div class="actions">
