--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <img src="i.imgur.com/t6ffnbn.png" alt="image-top-left" class="top-left-decoration"> 
       <section id="media"></section>
       <div class="welcome">
+        بِسْمِ اللهِ الرَّحْمٰنِ الرَّحِيْمِ<br>
          In the Name of "Allah",<br>
          The Most Beneficent, The Most Merciful,
       </div>
